--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 a,a:hover {
-	color:#92DD03 ;
+	color:#d5de21 ;
 	text-decoration: none;
 }
 img {max-width: 100%;}
@@ -86,7 +86,7 @@ img {max-width: 100%;}
 .navbar.navbar-inverse.navbar-static-top {
 	margin:0px auto;
 	background:none;
-	color:#92DD03;
+	color:#d5de21;
 	border:none;
 	font-family:'Open Sans',sans-serif;
 	font-size:14px;
@@ -114,11 +114,11 @@ img {max-width: 100%;}
 	display:none;
 }
 .isFixed .navbar-inverse .navbar-nav>.active>a,.isFixed .navbar-inverse .navbar-nav>.active>a:focus {
-	background:#92DD03 ;
+	background:#d5de21 ;
 	color:#fff;
 }
 .isFixed .navbar.navbar-inverse.navbar-static-top a:hover {
-	background:#92DD03 ;
+	background:#d5de21 ;
 	color:#fff;
 }
 .isFixed .navbar.navbar-inverse.navbar-static-top a {
@@ -192,7 +192,7 @@ header {
 	padding:5px;
 }
 .heading h2::first-letter {
-	color:#92DD03 ;
+	color:#d5de21 ;
 }
 .heading h3 {
 	font-size:16px;
@@ -375,7 +375,7 @@ img#site-title {
 	margin:0 0 20px 0;
 	font-size:19px;
 	padding-bottom:10px;
-	color:#92DD03 ;
+	color:#d5de21 ;
 	border-bottom: 4px double #eee;
 }
 
@@ -633,7 +633,7 @@ span.nav-close:before {
 
 .hi-icon-effect i.fa:hover {
 	background:#fff;
-	color: #92DD03;
+	color: #d5de21;
 	-webkit-transition: color 300ms, background-color 300ms;
   -moz-transition: color 300ms, background-color 300ms;
   -o-transition:  color 300ms, background-color 300ms;
@@ -646,7 +646,7 @@ span.nav-close:before {
 	margin-bottom:30px;
 	color:#fff;
 	padding:50px;
-	background:#92DD03;
+	background:#d5de21;
 	border-radius:50%;
 }
 
@@ -684,7 +684,7 @@ span.nav-close:before {
 }
 
 .contact-info i {
-	color:#92DD03;	
+	color:#d5de21;	
 }
 
 
@@ -755,7 +755,7 @@ textarea.contact {
 	border-radius:3px;
 }
 .contact.submit:hover {
-	background:#92DD03 ;
+	background:#d5de21 ;
 }
 .done {
 	display:none;
@@ -775,7 +775,7 @@ textarea.contact {
 }
 /* --- Footer --- */
 .footer {
-	background:#92DD03 ;
+	background:#d5de21 ;
 	margin-top:120px;
 	position:relative;
 	margin-right:-15px;
@@ -837,7 +837,7 @@ textarea.contact {
 	border-radius:50%;
 }
 .gototop i {
-	color:#92DD03 ;
+	color:#d5de21 ;
 	line-height:70px;
 }
 .footer a,.footer a:hover {
@@ -862,11 +862,11 @@ blockquote:before {
 	position:absolute;
 	left:10px;
 	top:-30px;
-	color:#92DD03 ;
+	color:#d5de21 ;
 	font-family:Georgia;
 }
 blockquote cite {
-	color:#92DD03 ;
+	color:#d5de21 ;
 	font-size:14px;
 	display:block;
 	margin-top:5px;
